# wifi_manager

./: .gitignore  API.md  CHANGELOG.md  CMakeLists.txt  DESIGN.md  HOST_TESTING_GUIDE.md  Kconfig.projbuild  LICENSE  README.md  STUDY.md  idf_component.yml  snapshot.md  wifi_config_storage.cpp  wifi_driver_hal.cpp  wifi_event_handler.cpp  wifi_manager.cpp  wifi_state_machine.cpp  wifi_sync_manager.cpp
.github/workflows/: build.yml
examples/basic_usage/: .cproject  .project  CMakeLists.txt  README.md  report.txt  sdkconfig.defaults
examples/basic_usage/main/: main.cpp  (+2 more)
host_test/: CMakeLists.txt  README.md  pytest_host_tests.py
host_test/common/: host_test_common.cpp  host_test_common.hpp  secrets.h.example  test_wifi_manager_accessor.hpp
host_test/integration_internal/: CMakeLists.txt  sdkconfig.defaults
host_test/wifi_config_storage/: CMakeLists.txt  sdkconfig.defaults
host_test/wifi_driver_hal/: CMakeLists.txt  sdkconfig.defaults
host_test/wifi_driver_hal/main/: CMakeLists.txt  test_wifi_driver_hal.cpp
host_test/wifi_event_handler/: CMakeLists.txt
host_test/wifi_state_machine/: CMakeLists.txt
host_test/wifi_sync_manager/: CMakeLists.txt
include/: wifi_config_storage.hpp  wifi_driver_hal.hpp  wifi_event_handler.hpp  wifi_manager.hpp  wifi_state_machine.hpp  wifi_sync_manager.hpp  wifi_types.hpp
test/: CMakeLists.txt  log.txt  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3
test/main/: CMakeLists.txt  main.c  test_memory_helper.h  test_wifi_manager.cpp  test_wifi_manager_accessor.hpp  test_wifi_manager_internal.cpp
test_apps/: README.md
test_apps/common/: test_wifi_manager_accessor.hpp
test_apps/integration_internal/: CMakeLists.txt
test_apps/integration_public/: CMakeLists.txt
test_apps/wifi_config_storage/: CMakeLists.txt
test_apps/wifi_driver_hal/: CMakeLists.txt
test_apps/wifi_event_handler/: CMakeLists.txt
(+31 files in other folders)
