idf_component_register(
    SRCS
        "test_wifi_driver_hal.cpp"
        "test_main.cpp"
        "../../common/host_test_common.cpp"
    INCLUDE_DIRS
        "."
        "../../common"
    REQUIRES
        unity
        wifi_manager
        nvs_flash
        esp_event
        esp_netif
        esp_wifi
        esp_timer
    WHOLE_ARCHIVE
)
